# hand-tracking-sdk-ros2

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
.github/workflows/: ros2-ci.yml
config/: bridge.params.yaml
hand_tracking_sdk_ros2/: __init__.py  adapters.py  bridge_node.py  config.py  diagnostics.py  markers.py  publishers.py  runtime.py  tf_broadcaster.py
launch/: bridge.launch.py  view_hands.launch.py
rviz/: hand_tracking.rviz
test/: test_adapters.py  test_bridge_launch.py  test_bridge_params.py  test_diagnostics.py  test_flake8.py  test_markers.py
